--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@important {
+  @layer components {
+     .badge-custom {
+    @apply bg-white/20 backdrop-blur-sm rounded-full px-2.5 py-1 text-white text-sm font-medium inline-flex items-center me-2 border border-gray-400/30 bg-gradient-to-r from-gray-400/20 to-gray-600/20;
+  }
+  .badge-custom-purple {
+    @apply badge-custom bg-purple-500/20 backdrop-blur-sm rounded-full px-2.5 py-1 text-white text-sm font-medium inline-flex items-center me-2 border border-purple-500/30 bg-gradient-to-r from-purple-500/20 to-purple-700/20;
+  }
+  button.btn-custom {
+    @apply text-gray-900 bg-gray-100 border border-gray-300 hover:bg-gray-200 
+      hover:shadow-lg hover:shadow-white/20 transition-all duration-300 
+      focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium 
+      rounded-full text-sm px-5 py-2.5 uppercase;
+  }
+  }
+}
+
+
+  html {
+    font-family: 'Nunito Sans', system-ui, -apple-system, sans-serif;
+  }
