--- a/src/input.css
+++ b/src/input.css
@@ -17,10 +17,10 @@
   }
   /* data attributes */
   button.btn-custom-category[data-state="active"] {
-    @apply btn-custom text-black bg-gray-300 text-xs px-4 py-2;
+    @apply btn-custom text-black dark:text-white bg-gray-300 dark:bg-gray-700 text-xs px-4 py-2;
   }
   button.btn-custom-category[data-state="inactive"] {
-    @apply btn-custom text-gray-300 bg-transparent text-xs px-4 py-2;
+    @apply btn-custom text-gray-500 dark:text-gray-100 bg-transparent text-xs px-4 py-2;
   }
 }
 
